--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,7 +21,10 @@
   z-index: 5;
   cursor: pointer;
   transition: all 0.3s;
+  transition-delay: 0.1s;
   position: absolute;
+  width: 85px;
+  height: 85px;
 }
 
 .SideBarOpenButton:hover {
