refactor: added interactive block, fix: sidebar closes on a link

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,6 @@
   height: 90px;
   position: relative;
   display: flex;
-
   align-items: center;
   background-color: coral;
 }
@@ -21,14 +20,15 @@
   z-index: 5;
   cursor: pointer;
   transition: all 0.3s;
-  transition-delay: 0.1s;
+  transition-delay: 0.2s;
   position: absolute;
   width: 85px;
   height: 85px;
+  user-select: none;
 }
 
 .SideBarOpenButton:hover {
-  transition-delay: 0.1s;
+  transition-delay: 0.2s;
   left: calc(10% - 10px);
   margin: 0;
   transform: rotate(270deg);
