--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  background-color: coral;
+  background-color: rgb(230, 156, 106);
 }
 
 .SideBarOpenButton {
@@ -38,12 +38,20 @@
 .ModeSelector {
   right: 10%;
   position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
+.ModeText {
+  margin-right: 5px;
+  user-select: none;
+  font-size: 15px;
+}
 
 @media (max-width: 320px) {
   .Header {
     width: 320px;
   }
 }
-
