--- a/src/components/Card/ItemCard/ItemCard.scss
+++ b/src/components/Card/ItemCard/ItemCard.scss
@@ -1,23 +1,39 @@
 @import '../../../index.scss';
 
-.itemCard.front {
+
+.CardContainer {
+  width: 100%;
+  height: 250px;
+  background-color: white;
+  align-self: center;
+  justify-self: center;
+  border-radius: 10px;
+  position: relative;
+  transition: transform 0.5s ease-in-out;
+  transform-style: preserve-3d;
+  &.flipped {
+    transform: rotateY(180deg);
+  }
+}
+
+.ItemCard {
+  position: absolute;
   height: 100%;
+  width: 100%;
   border-radius: 10px;
   opacity: 0.9;
   overflow: hidden;
-  transition: all 0, 2;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-.itemCard.front:hover {
-  box-shadow: 0 8px 32px 0 rgba(51, 48, 34, 0.4);
-  transition: box-shadow $t-delay ease-in-out;
-  transform: scale (1.2 1.2);
-  opacity: 1;
-}
-
-.itemCard.back {
-  background-color: aquamarine;
-  position: absolute;
+  transition: all 0.15s ease-in-out;
+  box-shadow: $box-shadow-small;
+  backface-visibility: hidden;
+  &:hover {
+    box-shadow: $box-shadow-big;
+    transform: scale(1.005);
+    opacity: 1;
+  }
+  &.back {
+    transform: rotateY(180deg);
+  }
 }
 
 .CardImageContainer {
@@ -26,6 +42,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  transition: height 0.1s ease-in-out;
   &.play {
     height: 100%;
   }
@@ -35,15 +52,20 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  pointer-events: none;
+  user-select: none;
 }
 
 .CardControlPanel {
   height: 20%;
-  background-color: rgb(248, 241, 241);
+  background-color: $control-panelbg;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   text-transform: uppercase;
+  &.flipped {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .ControlPanelPlayButton {
@@ -51,7 +73,6 @@
   width: 35px;
   align-self: center;
   justify-self: center;
-  color: red;
   cursor: pointer;
   user-select: none;
   &:hover {
