--- a/src/components/StatsBlock/StatsBlock.scss
+++ b/src/components/StatsBlock/StatsBlock.scss
@@ -1,1 +1,39 @@
 @import '../../index.scss';
+
+.StatsBlock {
+    width: 80%;
+    background-color: $main;
+    border-radius: 10px;
+    height: 0px;
+    margin-bottom: 25px;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    transition: height 0.2s ease-in-out;
+    gap: 20px;
+    &.game {
+        height: 70px;
+    }
+}
+
+.TextStatsBlock {
+    opacity: 0;
+    align-self: center;
+    font-size: 20px;
+    font-weight: $medium;
+    transition: opacity 0.2s ease-in-out;
+    &.game {
+        opacity: 1;
+    }
+}
+
+.IconContainer {
+    margin-top: 5px;
+    align-self: center;
+}
+
+.Icon {
+    align-self: center;
+    width: 50px;
+    height: 50px;
+}
+
