feature: beforeunload and page leave alerts; fix: reset all values on page leave if play, refactor: ++animation on buttons,

--- a/src/components/StatsBlock/StatsBlock.scss
+++ b/src/components/StatsBlock/StatsBlock.scss
@@ -3,11 +3,12 @@
 .StatsBlock {
     width: 80%;
     background-color: $main;
+    padding: 0 25px 0 25px;
     border-radius: 10px;
     height: 0px;
     margin-bottom: 25px;
     display: grid;
-    grid-template-columns: repeat(9, 1fr);
+    grid-template-columns: repeat(11, 1fr);
     transition: height 0.2s ease-in-out;
     gap: 20px;
     &.game {
