--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 $main: rgba(0, 52, 0, 0.137);
+$statsblock: rgba(0, 52, 0, 0.705);
 $gradient: rgb(187, 230, 106);
 $secondary: rgb(0, 52, 0, 0.4);
 $sidebar: rgb(197, 233, 184);
