--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,9 +3,11 @@
 .Header {
   width: 100%;
   height: 90px;
-  position: relative;
+  position: fixed;
   display: flex;
   align-items: center;
+  z-index: 9;
+  opacity: 0.9;
 }
 
 .SideBarOpenButton {
