feature: scroll to the top when user enables play mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 $main: rgba(0, 52, 0, 0.137);
 $statsblock: rgba(0, 52, 0, 0.705);
 $gradient: rgb(187, 230, 106);
