--- a/src/components/PageInfoBlock/PageInfoBlock.scss
+++ b/src/components/PageInfoBlock/PageInfoBlock.scss
@@ -12,13 +12,11 @@
   align-items: center;
   flex-direction: row;
   justify-content: center;
-  scale: 0;
   height: 0;
   opacity: 0;
   margin-top: 5px;
   transition: all 0.3s ease-in-out;
   &.show {
-    transform: scale(1);
     opacity: 1;
     height: 40px;
   }
@@ -52,6 +50,7 @@
   opacity: 1;
   transition: transform 0.1s ease-in-out;
   transition: opacity 0.3s ease-in-out;
+  z-index: 200;
   &:hover {
     background-color: $secondary;
     transform: scale(1.05);
