--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -15,12 +15,11 @@
   transition: all 0.5s;
   position: fixed;
   background-color: $sidebar;
-}
-
-.SideBar.active {
-  left: 0;
-  transition: all 0.5s;
-  opacity: 0.9;
+  &.active {
+    left: 0;
+    transition: all 0.5s;
+    opacity: 0.9;
+  }
 }
 
 .SideBarMenuItem {
@@ -42,6 +41,7 @@
   font-size: 35px;
   font-weight: 800;
   cursor: pointer;
+  left: 10%;
 }
 
 li {
