--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   min-height: 100%;
   background-color: rgb(224, 224, 224);
+  min-width: 320px;
 }
 
 code {
