feature: network indicator added; fix: audio play func, minor bug fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@ $main: rgba(0, 52, 0, 0.137);
 $statsblock: rgba(0, 52, 0, 0.705);
 $gradient: rgb(187, 230, 106);
 $secondary: rgb(0, 52, 0, 0.4);
+$secondary-op1: rgba(0, 0, 0, 0.822);
 $sidebar: rgb(197, 233, 184);
 $control-panelbg: rgb(248, 241, 241);
 $box-shadow-small: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
