refactor: redux types and interfaces, loading line state added, fix: minor bug fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,8 +23,8 @@ $mobile-screen3: 650px;
 $mobile-screen2: 600px;
 $mobile-screen1: 500px;
 $minimum-screen: 320px;
-$appfont: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+$appfont: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+  'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 
 @keyframes swing {
   15% {
