refactor: pre-commit hook; feat(package): add stylelint

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,5 +2,5 @@
   text-align: center;
   position: relative;
   min-height: 100vh;
-  font-family: 'Rubik', sans-serif;
+  font-family: Rubik, sans-serif;
 }
