--- a/src/components/Card/ItemCard/ItemCard.scss
+++ b/src/components/Card/ItemCard/ItemCard.scss
@@ -1,5 +1,5 @@
-@import '../../../index.scss';
-@import '../../../styles.scss';
+@import "../../../index.scss";
+@import "../../../styles.scss";
 
 .CardContainer {
   width: 100%;
@@ -11,6 +11,7 @@
   position: relative;
   transition: transform 0.5s ease-in-out;
   transform-style: preserve-3d;
+
   &.flipped {
     transform: rotateY(180deg);
   }
@@ -26,11 +27,13 @@
   transition: all 0.15s ease-in-out;
   box-shadow: $box-shadow-small;
   backface-visibility: hidden;
+
   &:hover {
     box-shadow: $box-shadow-big;
     transform: scale(1.005);
     opacity: 1;
   }
+
   &.back {
     transform: rotateY(180deg);
   }
@@ -43,6 +46,7 @@
   align-items: center;
   cursor: pointer;
   transition: height 0.3s ease-in-out;
+
   &.play {
     height: 100%;
   }
@@ -63,6 +67,7 @@
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   text-transform: uppercase;
+
   &.flipped {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -75,6 +80,7 @@
   justify-self: center;
   cursor: pointer;
   user-select: none;
+
   &:hover {
     animation: swing 0.6s ease;
     animation-iteration-count: 1;
@@ -88,6 +94,7 @@
   justify-self: center;
   cursor: pointer;
   user-select: none;
+
   &:hover {
     animation: swing 0.6s ease;
     animation-iteration-count: 1;
