--- a/src/components/NetworkIndicator/NetworkIndicator.scss
+++ b/src/components/NetworkIndicator/NetworkIndicator.scss
@@ -1,5 +1,5 @@
-@import '../../index.scss';
-@import '../../styles.scss';
+@import "../../index.scss";
+@import "../../styles.scss";
 
 .IndicatorContainer {
   position: fixed;
@@ -12,9 +12,11 @@
   top: 87%;
   left: 0;
   z-index: 18;
+
   &.view {
     display: flex;
   }
+
   &.hide {
     display: none;
   }
