--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -1,5 +1,5 @@
-@import '../../index.scss';
-@import '../../styles.scss';
+@import "../../index.scss";
+@import "../../styles.scss";
 
 .SideBarContainer {
   display: flex;
@@ -15,6 +15,7 @@
   transition: all 0.5s;
   position: fixed;
   background-color: $sidebar;
+
   &.active {
     left: 0;
     transition: all 0.5s;
@@ -29,6 +30,7 @@
   font-size: 30px;
   font-weight: $bold;
   font-style: italic;
+
   &:hover {
     color: $secondary;
   }
