--- a/src/components/StatsBlock/StatsBlock.scss
+++ b/src/components/StatsBlock/StatsBlock.scss
@@ -1,5 +1,5 @@
-@import '../../index.scss';
-@import '../../styles.scss';
+@import "../../index.scss";
+@import "../../styles.scss";
 
 .StatsBlockContainer {
   width: 100%;
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 3px;
+
   &.mini {
     position: fixed;
     top: calc(100% - 100px);
@@ -18,17 +19,19 @@
 .StatsBlock {
   width: 80%;
   background-color: $main;
-  padding: 0 25px 0 25px;
+  padding: 0 25px;
   border-radius: 10px;
-  height: 0px;
+  height: 0;
   margin-bottom: 15px;
   display: grid;
   grid-template-columns: repeat(11, 1fr);
   transition: height 0.2s ease-in-out;
   gap: 20px;
+
   &.game {
     height: 70px;
   }
+
   &.mini {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -43,6 +46,7 @@
   font-weight: $medium;
   transition: opacity 0.2s ease-in-out;
   font-family: $appfont;
+
   &.game {
     opacity: 1;
   }
@@ -64,14 +68,17 @@
   font-size: 30px;
   font-weight: $medium;
   transition: opacity 0.2s ease-in-out;
+
   &.game {
     opacity: 1;
   }
+
   &.correct {
-    color: rgba(28, 90, 28, 0.801);
+    color: rgb(28 90 28 / 80.1%);
   }
+
   &.wrong {
-    color: rgba(136, 42, 18, 0.801);
+    color: rgb(136 42 18 / 80.1%);
   }
 }
 
@@ -79,9 +86,11 @@
   .StatsBlockContainer {
     top: calc(100% - 90px);
   }
+
   .StatsBlock {
-    background-color: rgba(219, 219, 219, 0.712);
+    background-color: rgb(219 219 219 / 71.2%);
   }
+
   .Icon {
     width: 45px;
     height: 45px;
