--- a/src/components/UpdateSWMessage/UpdateSWMessage.scss
+++ b/src/components/UpdateSWMessage/UpdateSWMessage.scss
@@ -1,5 +1,5 @@
-@import '/src/index.scss';
-@import '/src/styles.scss';
+@import "/src/index.scss";
+@import "/src/styles.scss";
 
 .UpdateSWContainer {
   position: fixed;
@@ -9,13 +9,14 @@
   width: 100%;
   height: 80px;
   opacity: 0.9;
-
   top: 87%;
   left: 0;
   z-index: 18;
+
   &.view {
     display: flex;
   }
+
   &.hide {
     display: none;
   }
@@ -55,7 +56,7 @@
   height: 20px;
   width: 100px;
   display: flex;
-  background-color: rgba(128, 128, 128, 0.705);
+  background-color: rgb(128 128 128 / 70.5%);
   opacity: 1;
   align-items: center;
   flex-direction: row;
@@ -63,7 +64,8 @@
   font-size: 15px;
   color: black;
   cursor: pointer;
+
   &:hover {
-    background-color: rgb(128, 128, 128);
+    background-color: rgb(128 128 128);
   }
 }
