--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
-$main: rgba(0, 52, 0, 0.137);
-$statsblock: rgba(0, 52, 0, 0.705);
-$gradient: rgb(187, 230, 106);
-$secondary: rgb(0, 52, 0, 0.4);
-$secondary-op1: rgba(0, 0, 0, 0.822);
-$sidebar: rgb(197, 233, 184);
-$control-panelbg: rgb(248, 241, 241);
-$box-shadow-small: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-$box-shadow-big: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+$main: rgb(0 52 0 / 13.7%);
+$statsblock: rgb(0 52 0 / 70.5%);
+$gradient: rgb(187 230 106);
+$secondary: rgb(0 52 0 / 40%);
+$secondary-op1: rgb(0 0 0 / 82.2%);
+$sidebar: rgb(197 233 184);
+$control-panelbg: rgb(248 241 241);
+$box-shadow-small: rgb(0 0 0 / 16%) 0 3px 6px, rgb(0 0 0 / 23%) 0 3px 6px;
+$box-shadow-big: rgb(0 0 0 / 25%) 0 14px 28px, rgb(0 0 0 / 22%) 0 10px 10px;
 $t-delay: 0.05s;
 $bold: 700;
 $medium: 500;
@@ -23,32 +23,37 @@ $mobile-screen3: 650px;
 $mobile-screen2: 600px;
 $mobile-screen1: 500px;
 $minimum-screen: 320px;
-$appfont: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+$appfont: -apple-system, blinkmacsystemfont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
   'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 
 @keyframes swing {
   15% {
-    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
     transform: translateX(4px);
   }
+
   30% {
-    -webkit-transform: translateX(-4px);
+    transform: translateX(-4px);
     transform: translateX(-4px);
   }
+
   40% {
-    -webkit-transform: translateX(2.7px);
+    transform: translateX(2.7px);
     transform: translateX(2.7px);
   }
+
   50% {
-    -webkit-transform: translateX(-1.3px);
+    transform: translateX(-1.3px);
     transform: translateX(-1.3px);
   }
+
   65% {
-    -webkit-transform: translateX(1.3px);
+    transform: translateX(1.3px);
     transform: translateX(1.3px);
   }
+
   100% {
-    -webkit-transform: translateX(0);
+    transform: translateX(0);
     transform: translateX(0);
   }
 }
