feat(tests): add functions unit tests; refactor: code refactor

--- a/src/components/UpdateSWMessage/UpdateSWMessage.scss
+++ b/src/components/UpdateSWMessage/UpdateSWMessage.scss
@@ -1,5 +1,5 @@
-@import "/src/index.scss";
-@import "/src/styles.scss";
+@import '/src/index.scss';
+@import '/src/styles.scss';
 
 .UpdateSWContainer {
   position: fixed;
