--- a/src/components/ResultScreen/ResultScreen.scss
+++ b/src/components/ResultScreen/ResultScreen.scss
@@ -1,5 +1,5 @@
-@import "../../index.scss";
-@import "../../styles.scss";
+@import '../../index.scss';
+@import '../../styles.scss';
 
 .ResultScreen {
   position: absolute;
@@ -23,13 +23,69 @@
   }
 }
 
-.ResultPercent {
+.ResultContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: fixed;
   margin: 0;
-  top: 20%;
-  font-size: 50px;
+  top: 15%;
+  opacity: 1;
+}
+
+.ResultCloseButton {
+  margin: 50px 0;
+  background-color: rgb(221 226 221 / 52.7%);
+  border: 0;
+  height: 40px;
+  width: 200px;
+  font-weight: $bold;
+  font-size: 30px;
+  text-align: center;
+  border-radius: 10px;
+  line-height: 10px;
+  cursor: pointer;
+  transition: transform 0.1s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  z-index: 200;
+  font-family: $appfont;
+  opacity: 0.8;
+  box-shadow: $box-shadow-small;
+
+  &:hover {
+    transform: scale(1.05);
+    opacity: 1;
+  }
+
+  &:active {
+    color: white;
+    background-color: $secondary;
+  }
+}
+
+.ResultText {
+  margin-bottom: 30px;
+  font-size: 70px;
+  font-weight: $bold;
+}
+
+.ResultPercent {
+  margin: 30px 0;
+  font-size: 150px;
+  font-weight: $bold;
+
+  &.good {
+    color: rgb(15 102 15);
+  }
+
+  &.bad {
+    color: rgb(102 25 15);
+  }
+}
+
+@media (max-width: 900px) {
+  .ResultPercent {
+    font-size: 100px;
+  }
 }
