fix: app on load view

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,4 +3,9 @@
   position: relative;
   min-height: 100vh;
   font-family: Rubik, sans-serif;
+  display: unset;
+}
+
+&.hide {
+  display: none;
 }
